--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.10",
