--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
-    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.10",
